# forest

./: .gitignore  CMakeLists.txt  README.md
include/: bst.cppm  bst.h
tests/: CMakeLists.txt  test_bst.cpp
